--- a/mdk/stm32f407.uvprojx
+++ b/mdk/stm32f407.uvprojx
@@ -403,6 +403,11 @@
               <FileType>1</FileType>
               <FilePath>..\app\wifi.c</FilePath>
             </File>
+            <File>
+              <FileName>ui.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\app\ui.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
