--- a/mdk/stm32f407.uvprojx
+++ b/mdk/stm32f407.uvprojx
@@ -408,6 +408,11 @@
               <FileType>1</FileType>
               <FilePath>..\app\ui.c</FilePath>
             </File>
+            <File>
+              <FileName>workqueue.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\app\workqueue.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
